@@ -3,7 +3,6 @@ package org.jabref.logic.texparser;
 import java.net.URISyntaxException;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.Arrays;
 
 import org.jabref.logic.importer.ImportFormatPreferences;
@@ -11,8 +10,8 @@ import org.jabref.model.database.BibDatabase;
 import org.jabref.model.entry.BibEntry;
 import org.jabref.model.entry.field.StandardField;
 import org.jabref.model.entry.types.StandardEntryType;
-import org.jabref.model.texparser.TexBibEntriesResolverResult;
-import org.jabref.model.texparser.TexParserResult;
+import org.jabref.model.texparser.LatexBibEntriesResolverResult;
+import org.jabref.model.texparser.LatexParserResult;
 import org.jabref.model.util.DummyFileUpdateMonitor;
 import org.jabref.model.util.FileUpdateMonitor;
 
@@ -32,11 +31,11 @@ public class TexBibEntriesResolverTest {
     private final static String EINSTEIN_B = "Einstein1920b";
     private final static String EINSTEIN_C = "Einstein1920c";
 
-    private static FileUpdateMonitor fileMonitor = new DummyFileUpdateMonitor();
-    private static ImportFormatPreferences importFormatPreferences;
-    private static BibDatabase database;
-    private static BibDatabase database2;
-    private static BibEntry bibEntry;
+    private final FileUpdateMonitor fileMonitor = new DummyFileUpdateMonitor();
+    private ImportFormatPreferences importFormatPreferences;
+    private BibDatabase database;
+    private BibDatabase database2;
+    private BibEntry bibEntry;
 
     @BeforeEach
     private void setUp() {
@@ -100,67 +99,67 @@ public class TexBibEntriesResolverTest {
 
     @Test
     public void testSingleFile() throws URISyntaxException {
-        Path texFile = Paths.get(TexBibEntriesResolverTest.class.getResource("paper.tex").toURI());
-        TexParserResult parserResult = new DefaultTexParser().parse(texFile);
+        Path texFile = Path.of(TexBibEntriesResolverTest.class.getResource("paper.tex").toURI());
+        LatexParserResult parserResult = new DefaultLatexParser().parse(texFile);
 
-        TexBibEntriesResolverResult crossingResult = new TexBibEntriesResolver(database, importFormatPreferences, fileMonitor).resolve(parserResult);
-        TexBibEntriesResolverResult expectedCrossingResult = new TexBibEntriesResolverResult(parserResult);
+        LatexBibEntriesResolverResult crossingResult = new TexBibEntriesResolver(database, importFormatPreferences, fileMonitor).resolve(parserResult);
+        LatexBibEntriesResolverResult expectedCrossingResult = new LatexBibEntriesResolverResult(parserResult);
 
         assertEquals(expectedCrossingResult, crossingResult);
     }
 
     @Test
     public void testTwoFiles() throws URISyntaxException {
-        Path texFile = Paths.get(TexBibEntriesResolverTest.class.getResource("paper.tex").toURI());
-        Path texFile2 = Paths.get(TexBibEntriesResolverTest.class.getResource("paper2.tex").toURI());
-        TexParserResult parserResult = new DefaultTexParser().parse(Arrays.asList(texFile, texFile2));
+        Path texFile = Path.of(TexBibEntriesResolverTest.class.getResource("paper.tex").toURI());
+        Path texFile2 = Path.of(TexBibEntriesResolverTest.class.getResource("paper2.tex").toURI());
+        LatexParserResult parserResult = new DefaultLatexParser().parse(Arrays.asList(texFile, texFile2));
 
-        TexBibEntriesResolverResult crossingResult = new TexBibEntriesResolver(database, importFormatPreferences, fileMonitor).resolve(parserResult);
-        TexBibEntriesResolverResult expectedCrossingResult = new TexBibEntriesResolverResult(parserResult);
+        LatexBibEntriesResolverResult crossingResult = new TexBibEntriesResolver(database, importFormatPreferences, fileMonitor).resolve(parserResult);
+        LatexBibEntriesResolverResult expectedCrossingResult = new LatexBibEntriesResolverResult(parserResult);
 
         assertEquals(expectedCrossingResult, crossingResult);
     }
 
     @Test
     public void testDuplicateFiles() throws URISyntaxException {
-        Path texFile = Paths.get(TexBibEntriesResolverTest.class.getResource("paper.tex").toURI());
-        TexParserResult parserResult = new DefaultTexParser().parse(texFile);
+        Path texFile = Path.of(TexBibEntriesResolverTest.class.getResource("paper.tex").toURI());
+        LatexParserResult parserResult = new DefaultLatexParser().parse(texFile);
 
-        TexBibEntriesResolverResult crossingResult = new TexBibEntriesResolver(database, importFormatPreferences, fileMonitor).resolve(parserResult);
-        TexBibEntriesResolverResult expectedCrossingResult = new TexBibEntriesResolverResult(parserResult);
+        LatexBibEntriesResolverResult crossingResult = new TexBibEntriesResolver(database, importFormatPreferences, fileMonitor).resolve(parserResult);
+        LatexBibEntriesResolverResult expectedCrossingResult = new LatexBibEntriesResolverResult(parserResult);
 
         assertEquals(expectedCrossingResult, crossingResult);
     }
 
     @Test
     public void testUnknownKey() throws URISyntaxException {
-        Path texFile = Paths.get(TexBibEntriesResolverTest.class.getResource("unknown_key.tex").toURI());
-        TexParserResult parserResult = new DefaultTexParser().parse(texFile);
+        Path texFile = Path.of(TexBibEntriesResolverTest.class.getResource("unknown_key.tex").toURI());
+        LatexParserResult parserResult = new DefaultLatexParser().parse(texFile);
 
-        TexBibEntriesResolverResult crossingResult = new TexBibEntriesResolver(database, importFormatPreferences, fileMonitor).resolve(parserResult);
-        TexBibEntriesResolverResult expectedCrossingResult = new TexBibEntriesResolverResult(parserResult);
+        LatexBibEntriesResolverResult crossingResult = new TexBibEntriesResolver(database, importFormatPreferences, fileMonitor).resolve(parserResult);
+        LatexBibEntriesResolverResult expectedCrossingResult = new LatexBibEntriesResolverResult(parserResult);
 
         assertEquals(expectedCrossingResult, crossingResult);
     }
 
     @Test
     public void testNestedFiles() throws URISyntaxException {
-        Path texFile = Paths.get(TexBibEntriesResolverTest.class.getResource("nested.tex").toURI());
-        TexParserResult parserResult = new DefaultTexParser().parse(texFile);
+        Path texFile = Path.of(TexBibEntriesResolverTest.class.getResource("nested.tex").toURI());
+        LatexParserResult parserResult = new DefaultLatexParser().parse(texFile);
 
-        TexBibEntriesResolverResult crossingResult = new TexBibEntriesResolver(database, importFormatPreferences, fileMonitor).resolve(parserResult);
-        TexBibEntriesResolverResult expectedCrossingResult = new TexBibEntriesResolverResult(parserResult);
+        LatexBibEntriesResolverResult crossingResult = new TexBibEntriesResolver(database, importFormatPreferences, fileMonitor).resolve(parserResult);
+        LatexBibEntriesResolverResult expectedCrossingResult = new LatexBibEntriesResolverResult(parserResult);
 
         assertEquals(expectedCrossingResult, crossingResult);
     }
 
     @Test
     public void testCrossRef() throws URISyntaxException {
-        Path texFile = Paths.get(TexBibEntriesResolverTest.class.getResource("crossref.tex").toURI());
-        TexParserResult parserResult = new DefaultTexParser().parse(texFile);
+        Path texFile = Path.of(TexBibEntriesResolverTest.class.getResource("crossref.tex").toURI());
+        LatexParserResult parserResult = new DefaultLatexParser().parse(texFile);
 
-        TexBibEntriesResolverResult crossingResult = new TexBibEntriesResolver(database, importFormatPreferences, fileMonitor).resolve(parserResult);
-        TexBibEntriesResolverResult expectedCrossingResult = new TexBibEntriesResolverResult(parserResult);
+        LatexBibEntriesResolverResult crossingResult = new TexBibEntriesResolver(database, importFormatPreferences, fileMonitor).resolve(parserResult);
+        LatexBibEntriesResolverResult expectedCrossingResult = new LatexBibEntriesResolverResult(parserResult);
 
         expectedCrossingResult.addEntry(bibEntry);
 
