@@ -1,7 +1,6 @@
 package org.jabref.model.groups;
 
 import java.nio.file.Path;
-import java.nio.file.Paths;
 
 import org.jabref.logic.auxparser.DefaultAuxParser;
 import org.jabref.model.database.BibDatabase;
@@ -27,7 +26,7 @@ public class TexGroupTest {
 
     @Test
     public void containsReturnsTrueForEntryInAux() throws Exception {
-        Path auxFile = Paths.get(TexGroupTest.class.getResource("paper.aux").toURI());
+        Path auxFile = Path.of(TexGroupTest.class.getResource("paper.aux").toURI());
         TexGroup group = new TexGroup("paper", GroupHierarchyType.INDEPENDENT, auxFile, new DefaultAuxParser(new BibDatabase()), new DummyFileUpdateMonitor(), metaData);
         BibEntry inAux = new BibEntry();
         inAux.setCiteKey("Darwin1888");
@@ -37,7 +36,7 @@ public class TexGroupTest {
 
     @Test
     public void containsReturnsTrueForEntryNotInAux() throws Exception {
-        Path auxFile = Paths.get(TexGroupTest.class.getResource("paper.aux").toURI());
+        Path auxFile = Path.of(TexGroupTest.class.getResource("paper.aux").toURI());
         TexGroup group = new TexGroup("paper", GroupHierarchyType.INDEPENDENT, auxFile, new DefaultAuxParser(new BibDatabase()), new DummyFileUpdateMonitor(), metaData);
         BibEntry notInAux = new BibEntry();
         notInAux.setCiteKey("NotInAux2017");
@@ -47,9 +46,9 @@ public class TexGroupTest {
 
     @Test
     public void getFilePathReturnsRelativePath() throws Exception {
-        Path auxFile = Paths.get(TexGroupTest.class.getResource("paper.aux").toURI());
+        Path auxFile = Path.of(TexGroupTest.class.getResource("paper.aux").toURI());
         String user = "Darwin";
-        metaData.setLaTexFileDirectory(user, auxFile.getParent());
+        metaData.setLatexFileDirectory(user, auxFile.getParent());
         TexGroup group = new TexGroup("paper", GroupHierarchyType.INDEPENDENT, auxFile, new DefaultAuxParser(new BibDatabase()), new DummyFileUpdateMonitor(), metaData, user);
 
         assertEquals("paper.aux", group.getFilePath().toString());
